Fix layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,36 @@
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .main-container {
   display: flex;
   align-items: start;
 }
 
-.sidebar {
-  width: 20%;
-  background-color: lightgray;
-  height: 200vh;
-  padding-top: 200px;
-  display: flex;
-  flex-direction: column;
+.header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #F9FAFC;
+  height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  z-index: -1;
 }
 
 .div-content {
   width: 80%;
-  background-color: lightcoral;
+  background-color: #ffff;
   height: 200vh;
 }
 
 .topbar {
-  position: fixed;
-  height: 5%;
-  top: 0;
-  background-color: lightgray;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  background-color: #F9FAFC;
+  height: 100vh;
 
+  z-index: 0;
 }
